--- a/login_server/resources/db.properties
+++ b/login_server/resources/db.properties
@@ -1,6 +1,6 @@
 db.driverprotocol=sqlserver
 db.driverconnectiondetails=PTLoginServer\\LoginDB
-db.database=TekenDB
+db.database=LoginDB
 db.username=sa
 db.password=admin
 db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
