loginserver met unit test

--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,14 @@ project(":core") {
     }
 }
 
+project(":login_server") {
+    apply plugin: "java"
+
+    dependencies {
+        compile 'mysql:mysql-connector-java:5.1.+'
+    }
+}
+
 tasks.eclipse.doLast {
     delete ".project"
 }
