--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,7 @@ project(":core") {
 
 
     dependencies {
+        compile project(":SharedClasses");
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
