--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ allprojects {
         testRuntime("org.apache.logging.log4j:log4j-jul:${log4jVersion}")
 
         testCompile("ch.qos.logback:logback-classic:${logbackVersion}")
+        compile ("junit:junit:${junit4Version}")
     }
 
     compileTestJava {
@@ -100,10 +101,18 @@ project(":core") {
 
 
     dependencies {
-        compile project(":SharedClasses");
+        compile project(":SharedClasses")
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+    }
+}
+
+project(":game_server") {
+    apply plugin: "java"
+
+    dependencies {
+        compile project(":SharedClasses")
     }
 }
 
@@ -111,8 +120,14 @@ project(":login_server") {
     apply plugin: "java"
 
     dependencies {
-        compile project(":SharedClasses");
+        compile project(":SharedClasses")
         compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '6.2.1.jre8'
+    }
+
+    jar {
+        manifest {
+            attributes 'Main-Class': 'login_server.LoginServerLauncher'
+        }
     }
 }
 
