--- a/login_server/build.gradle
+++ b/login_server/build.gradle
@@ -16,6 +16,17 @@ jar {
     }
 }
 
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Jar File Example',
+                'Implementation-Version': version,
+                'Main-Class': 'login_server.LoginServerLauncher'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
 dependencies {
 
     testCompile('org.junit.jupiter:junit-jupiter-api:5.0.0-M2'
